--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,15 +1,12 @@
 {% if page.math or site.math %}
-  <!-- MathJax configuration -->
   <script>
     window.MathJax = {
       tex: {
         inlineMath: [['$', '$'], ['\\(', '\\)']],
         displayMath: [['$$', '$$'], ['\\[', '\\]']]
       },
-      options: { skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre'] }
+      options: { skipHtmlTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code'] }
     };
   </script>
-
-  <!-- MathJax script -->
-  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
+  <script async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 {% endif %}
